@@ -104,14 +104,14 @@ if [ "x$TEST_SSH_PLINK" != "x" ]; then
 	# Find real binary, if it exists
 	case "${TEST_SSH_PLINK}" in
 	/*) PLINK="${TEST_SSH_PLINK}" ;;
-	*) PLINK=`which ${TEST_SSH_PLINK}` ;;
+	*) PLINK=`which ${TEST_SSH_PLINK} 2>/dev/null` ;;
 	esac
 fi
 if [ "x$TEST_SSH_PUTTYGEN" != "x" ]; then
 	# Find real binary, if it exists
 	case "${TEST_SSH_PUTTYGEN}" in
 	/*) PUTTYGEN="${TEST_SSH_PUTTYGEN}" ;;
-	*) PUTTYGEN=`which ${TEST_SSH_PUTTYGEN}` ;;
+	*) PUTTYGEN=`which ${TEST_SSH_PUTTYGEN} 2>/dev/null` ;;
 	esac
 fi
 
@@ -289,7 +289,7 @@ chmod 644 $OBJ/authorized_keys_$USER
 
 # If PuTTY is present, prepare keys and configuration
 REGRESS_INTEROP_PUTTY=no
-if test -x $PUTTYGEN -a -x $PLINK ; then
+if test -x "$PUTTYGEN" -a -x "$PLINK" ; then
 	mkdir -p ${OBJ}/.putty
 
 	# Add a PuTTY key to authorized_keys
